k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamevault-ingress
  namespace: gamevault
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://3.0.15.128:30131"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Disposition"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # API 请求 → Gateway
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gamevault-gateway
                port:
                  number: 80

          # 上传文件 → Gateway
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: gamevault-gateway
                port:
                  number: 80

          # 前端页面 → Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamevault-frontend
                port:
                  number: 3000
